[html] Stub out basic html structure

--- a/index.html
+++ b/index.html
@@ -5,8 +5,35 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Galley Grub</title>
+  <link rel="stylesheet" href="/assets/styles/main.css">
 </head>
 <body>
-  
+  <h1>Galley Grub</h1>
+  <main>
+    <div class="menuItems">
+      <section class="itemSection entrees">
+        <h1 class="sectionHeader">Entrees</h1>
+        <div class="itemContainer entrees">
+          <!-- entree objects go here -->
+        </div>
+      </section>
+      <section class="itemSection sides">
+        <h1 class="sectionHeader">Sides</h1>
+        <div class="itemContainer sides">
+          <!-- side objects go here -->
+        </div>
+      </section>
+      <section class="itemSection drinks">
+        <h1 class="sectionHeader">Drinks</h1>
+        <div class="itemContainer drinks">
+          <!-- drink objects go here -->
+        </div>
+      </section>
+      <section class="orderFeed">
+        <!-- order feed html goes here -->
+        <h1>Order</h1>
+      </section>
+    </div>
+  </main>
 </body>
 </html>
