[FE] Add CDN for bootstrap icons, add spinners default html to item sections

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Galley Grub</title>
-  <link rel="stylesheet" href="/assets/styles/main.css">
+  <link rel="stylesheet" href="./assets/styles/main.css">
 </head>
 <body>
   <h1>Galley Grub</h1>
@@ -15,25 +15,31 @@
         <h1 class="sectionHeader">Entrees</h1>
         <div class="itemContainer entrees">
           <!-- entree objects go here -->
+          <i class="spinner bi-arrow-clockwise"></i>
         </div>
       </section>
       <section class="itemSection sides">
         <h1 class="sectionHeader">Sides</h1>
         <div class="itemContainer sides">
           <!-- side objects go here -->
+          <i class="spinner bi-arrow-clockwise"></i>
         </div>
       </section>
       <section class="itemSection drinks">
         <h1 class="sectionHeader">Drinks</h1>
         <div class="itemContainer drinks">
           <!-- drink objects go here -->
+          <i class="spinner bi-arrow-clockwise"></i>
         </div>
       </section>
-      <section class="orderFeed">
+    </div>
+      <section class="currentOrder">
         <!-- order feed html goes here -->
         <h1>Order</h1>
-      </section>
-    </div>
+        <div class="itemContainer">
+          <i class="spinner bi-arrow-clockwise"></i>
+        </div>
+      </section> 
   </main>
 </body>
 </html>
